--- a/IT17308_ps21795_DangTheHuy_asm1/bai2.css
+++ b/IT17308_ps21795_DangTheHuy_asm1/bai2.css
@@ -28,3 +28,13 @@ form .container{
     font-size: 30px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+.btn_container{
+    margin-left: 22%;
+}
+.btn_container button{
+    width: 100px;
+    background-color: burlywood;
+}
+.btn_container button:disabled{
+    background-color: dimgrey;
+}
